# volang

./: .gitignore  Cargo.toml  LICENSE  README.md  d.py
.cargo/: config.toml
benchmark/: README.md  bench.rb  run.sh
benchmark/binary-trees/: go_bench
benchmark/fibonacci/: Fib.java  fib.go  fib.lua  fib.py  fib.vo  go_bench
benchmark/matrix/: Matrix.java  matrix.go  matrix.lua  matrix.py  matrix.vo
benchmark/recursive-tree/: tree.c
benchmark/results/: binary-trees.json  binary-trees.md  fibonacci.json  fibonacci.md  sieve.json  sieve.md
benchmark/sieve/: Sieve.java  go_bench  sieve.go  sieve.lua  sieve.py  sieve.vo
cmd/vo/: compile.vo  emit.vo  get.vo  init.vo  main.vo  run.vo
cmd/vo-embed/: Cargo.toml
crates/gox-analysis/: Cargo.toml
crates/gox-analysis/src/: check.rs  collect.rs  constant.rs  display.rs  errors.rs  lib.rs  lookup.rs  objects.rs  operand.rs  project.rs  query.rs  resolve.rs  scope.rs  selection.rs  typ.rs  types.rs  universe.rs
crates/gox-analysis/src/check/: assignment.rs  builtin.rs  call.rs  checker.rs  conversion.rs  decl.rs  escape.rs  expr.rs  initorder.rs  interface.rs  mod.rs  resolver.rs  returns.rs  stmt.rs  tests.rs  type_info.rs  typexpr.rs  util.rs
crates/gox-aot/: Cargo.toml
crates/gox-cli/: Cargo.toml
crates/gox-cli/src/: bytecode_tests.rs  bytecode_text.rs  main.rs
crates/gox-codegen-cranelift/: Cargo.toml
crates/gox-codegen-llvm/: Cargo.toml
crates/gox-codegen-vm/: Cargo.toml
crates/gox-codegen-vm/src/: context.rs  expr.rs  func.rs  lib.rs  stmt.rs  type_info.rs  types.rs
crates/gox-codegen-wasm/: Cargo.toml
crates/gox-common/: Cargo.toml  README.md
crates/gox-common-core/: Cargo.toml
crates/gox-jit/: Cargo.toml
crates/gox-module/: Cargo.toml
crates/gox-module/src/: error.rs  lib.rs  modfile.rs  resolver.rs  vfs.rs
crates/gox-native/: Cargo.toml
crates/gox-native/src/: lib.rs
crates/gox-runtime-core/: Cargo.toml
crates/gox-runtime-core/src/: api.rs  ffi.rs  gc.rs  gc_types.rs  lib.rs  objects.rs
crates/gox-runtime-core/src/stdlib/: base64.rs  builtin.rs  bytes.rs  fmt.rs  hex.rs  mod.rs  rand.rs  strconv.rs  strings.rs  time.rs  unicode.rs
crates/gox-runtime-native/: Cargo.toml
crates/gox-runtime-native/src/: debug.rs  extern_dispatch.rs  gc_global.rs  goroutine.rs  lib.rs  native_dispatch.rs  stack_map.rs  symbols.rs
crates/gox-runtime-native/src/extern_fns/: base64.rs  bytes.rs  fmt.rs  hex.rs  json.rs  math.rs  mod.rs  regexp.rs  sort.rs  strconv.rs  strings.rs  unicode.rs
crates/gox-wasm/: Cargo.toml
crates/gox-wasm/src/: lib.rs
crates/vo-codegen-vm/: Cargo.toml
crates/vo-codegen-vm/src/: context.rs  error.rs  expr.rs  func.rs  lib.rs  lvalue.rs  stmt.rs  type_info.rs  type_interner.rs
crates/vo-codegen-vm/tests/: integration.rs
crates/vo-runtime-core/: Cargo.toml
crates/vo-runtime-core/src/: ffi.rs  gc.rs  gc_types.rs  lib.rs  types.rs
crates/vo-runtime-core/src/objects/: array.rs  channel.rs  interface.rs  map.rs  slice.rs  string.rs  struct_ops.rs
crates/vo-runtime-core/src/stdlib/: builtin.rs  fmt.rs  mod.rs
english/: language_spec.md  parser.md  type_checker.md
examples/: hello.goxt  hello.vo
instructions/: architect.txt  spec.txt
lang/: d.py
lang/crates/vo-codegen/: Cargo.toml
lang/crates/vo-codegen/src/: context.rs  embed.rs  error.rs  func.rs  lib.rs  lvalue.rs  stmt.rs  type_info.rs  wrapper.rs
lang/crates/vo-codegen/src/expr/: binary.rs  builtin.rs  call.rs  comparison.rs  dyn_access.rs  indexing.rs  literal.rs  method_value.rs  mod.rs  pointer.rs  selector.rs
lang/crates/vo-codegen/src/stmt/: assign_stmt.rs  defer_go.rs  dyn_assign.rs  for_loop.rs  for_range.rs  mod.rs  return_stmt.rs  select.rs  switch.rs  var_def.rs
lang/crates/vo-codegen/tests/: integration.rs
lang/crates/vo-ext/: Cargo.toml
lang/crates/vo-ext/src/: lib.rs
lang/crates/vo-ffi-macro/: Cargo.toml
lang/crates/vo-ffi-macro/src/: lib.rs  vo_parser.rs
lang/crates/vo-stdlib/: Cargo.toml
lang/crates/vo-stdlib/src/: lib.rs  native.rs  os.rs  time.rs  wasm.rs
lang/crates/vo-vm/: Cargo.toml
lang/crates/vo-vm/src/: fiber.rs  gc_roots.rs  scheduler.rs
lang/crates/vo-vm/src/exec/: call.rs  channel.rs  defer.rs  extern_call.rs  iface.rs  island.rs  mod.rs  port.rs  select.rs  unwind.rs
lang/crates/vo-vm/src/vm/: helpers.rs  island_thread.rs  jit_glue.rs  mod.rs  types.rs
libs/detra-renderer-tui/rust/: Cargo.toml
libs/detra-renderer-tui/rust/src/: lib.rs
libs/vo/ast/rust/: Cargo.toml
libs/vo/ast/rust/src/: ffi.rs  lib.rs
libs/vo/bytecode/rust/: Cargo.toml
libs/vo/bytecode/rust/src/: ffi.rs  lib.rs
libs/vo/runner/rust/: Cargo.toml
libs/vo/runner/rust/examples/: test_compile.rs
libs/vo/runner/rust/src/: ffi.rs  lib.rs
libs/vogui/rust/: Cargo.toml
libs/vogui/rust/src/: externs.rs  lib.rs
libs/vox/rust/: Cargo.toml
libs/vox/rust/src/: ffi.rs  format.rs  lib.rs  printer.rs
playground/: index.html  package-lock.json  package.json  vite.config.ts
playground/rust/: Cargo.toml
playground/rust/src/: lib.rs
scripts/: test.sh
stdlib/: stdlib.toml
test_data/: _config.yaml  _skip.yaml  _tests.yaml  anonymous_receiver.vo  anonymous_struct_literal.vo  bug_defer_break_label.vo  bug_switch_default_first.vo  bytes_buffer.vo  chan_of_chan.vo  closure_as_map_value.vo  composite_comparison.vo  cross_pkg_interface_nil.vo  debug_iface.vo  debug_nil_interface.vo  defer_named_return.vo  defer_return_modify_complex.vo  defer_return_shadow.vo  dyn_access_big_struct.vo  dyn_access_interface_field.vo  dyn_access_interface_itab_bug.vo  dyn_access_map_interface_val.vo  dyn_access_slice_interface_elem.vo  dyn_call_lhs_typed.vo  dyn_call_multi_slot_ret.vo  dyn_member_method.vo  dyn_try_unwrap.vo  dyn_write.vo  dyn_write_no_error_return.vo  errdefer_stmt.vo  error_handling_sugar.vo  escaped_array_init.vo  fail_stmt.vo  for_post_side_effect.vo  gc_interface_dynamic.vo  go_method_value.vo  hex_literal_debug.vo  iface_noncomparable_panics.vo  iface_to_iface_itab.vo  interface.vo  interface_closure.vo  (+16 more)
vibe-studio/: main.vo  main_tui.vo  print_tree.vo  test_tui.vo
(+866 files in other folders)
