[workspace]
resolver = "2"
members = [
  # Frontend
  "crates/gox-common",
  "crates/gox-syntax",
  "crates/gox-analysis",
  "crates/gox-module",
  
  # Code Generation
  "crates/gox-codegen-vm",
  
  # VM
  "crates/gox-vm",
  
  # Native Backends (Cranelift)
  "crates/gox-jit",
  "crates/gox-native",
  "crates/gox-wasm",
  
  # Runtime
  "crates/gox-runtime-core",
  "crates/gox-runtime-vm",
  
  # Tools
  "crates/gox-cli",
  "crates/gox-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
