[workspace]
resolver = "2"
members = [
  # Core (no_std)
  "crates/vo-common-core",
  
  # Frontend
  "crates/vo-common",
  "crates/vo-syntax",
  "crates/vo-analysis",
  "crates/vo-module",
  
  # Code Generation
  "crates/vo-codegen",
  # "crates/vo-codegen-cranelift",
  
  # Runtime
  "crates/vo-runtime",
  "crates/vo-runtime-native",
  
  # VM
  "crates/vo-vm",
  
  # JIT
  "crates/vo-jit",
  
  # FFI Macro
  "crates/vo-ffi-macro",
  
  # Tools
  "crates/vo-cli",
  
  # Web (WASM) - pending
  # "crates/vo-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
