[package]
name = "gox-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic analysis and type checking for the GoX programming language"

[dependencies]
gox-common = { path = "../gox-common" }
gox-syntax = { path = "../gox-syntax" }

[dev-dependencies]
