[package]
name = "gox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the GoX compiler"

[[bin]]
name = "gox"
path = "src/main.rs"

[dependencies]
gox-common = { path = "../gox-common" }
gox-syntax = { path = "../gox-syntax" }
gox-analysis = { path = "../gox-analysis" }
gox-module = { path = "../gox-module" }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
