[package]
name = "gox-codegen-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Custom VM bytecode generation for GoX"

[dependencies]
gox-common = { path = "../gox-common" }
gox-common-core = { path = "../gox-common-core" }
gox-syntax = { path = "../gox-syntax" }
gox-analysis = { path = "../gox-analysis" }
gox-vm = { path = "../gox-vm" }
num-traits = "0.2"

[dev-dependencies]
gox-runtime-vm = { path = "../gox-runtime-vm" }
