[package]
name = "gox-module"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Module system for GoX: gox.mod parsing, dependency resolution, and import path resolution"

[dependencies]
gox-common = { path = "../gox-common" }

[dev-dependencies]
tempfile = "3.10"
