[package]
name = "gox-runtime-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native runtime support for GoX AOT and JIT compilation"

[dependencies]
gox-runtime-core = { path = "../gox-runtime-core" }

# Goroutine support (stackful coroutines + M:N scheduler)
corosensei = "0.2"
parking_lot = "0.12"
crossbeam-deque = "0.8"
