[package]
name = "gox-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly compilation for GoX using Cranelift"

[dependencies]
gox-common = { path = "../gox-common" }
gox-vm = { path = "../gox-vm" }
gox-runtime-core = { path = "../gox-runtime-core" }

# Cranelift dependencies (commented until ready to implement)
# cranelift-codegen = "0.113"
# cranelift-frontend = "0.113"
# cranelift-wasm = "0.113"

[dev-dependencies]
