[package]
name = "vo-codegen-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vo-common = { path = "../vo-common" }
vo-common-core = { path = "../vo-common-core" }
vo-syntax = { path = "../vo-syntax" }
vo-analysis = { path = "../vo-analysis" }
vo-vm = { path = "../vo-vm" }

[dev-dependencies]
