[package]
name = "vo-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vo language runtime core - shared data structures for VM and JIT"

[features]
default = ["std"]
std = []

[dependencies]
vo-common-core = { path = "../vo-common-core" }
vo-ffi-macro = { path = "../vo-ffi-macro" }
hashbrown = "0.15"
linkme = "0.3"
