[package]
name = "vo-playground"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vogui = { path = "../../libs/vogui/rust" }
vo-web = { path = "../../lang/crates/vo-web" }
vo-common = { path = "../../lang/crates/vo-common" }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
include_dir = "0.7"
