[package]
name = "vo-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vo language virtual machine"

[features]
default = ["std"]
std = ["vo-runtime/std", "vo-stdlib/std"]
# Enable JIT compilation support
jit = ["vo-jit"]

[dependencies]
vo-runtime = { path = "../vo-runtime", default-features = false }
vo-common-core = { path = "../vo-common-core" }
vo-stdlib = { path = "../vo-stdlib", default-features = false }
hashbrown = "0.15"
fastrand = "2.0"

# Optional JIT compiler
vo-jit = { path = "../vo-jit", optional = true }
