[package]
name = "detra_renderer_tui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-runtime = { path = "../../../lang/crates/vo-runtime" }
vo-ext = { path = "../../../lang/crates/vo-ext" }
detra-renderable = { path = "../../detra-renderable" }
linkme = "0.3"
lazy_static = "1.4"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
