[package]
name = "vogui"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use vo-web as the platform layer
vo-web = { path = "../../../lang/crates/vo-web" }
vo-vm = { path = "../../../lang/crates/vo-vm", default-features = false }
vo-common = { path = "../../../lang/crates/vo-common", default-features = false }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window"] }
include_dir = "0.7"

# Native-only dependencies (for cargo check on non-wasm targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vo-runtime = { path = "../../../lang/crates/vo-runtime" }
vo-ext = { path = "../../../lang/crates/vo-ext" }
linkme = "0.3"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
vo-runtime = { path = "../../../lang/crates/vo-runtime", default-features = false }
vo-ext = { path = "../../../lang/crates/vo-ext", default-features = false, features = ["wasm"] }

[features]
default = []
