[package]
name = "vo-vox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vox - compile, run, and inspect Vo programs"

[features]
default = []
ffi = []
gc-debug = ["vo-runtime/gc-debug"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-launcher = { path = "../../../lang/crates/vo-launcher", default-features = false }
vo-vm = { path = "../../../lang/crates/vo-vm", default-features = false }
vo-runtime = { path = "../../../lang/crates/vo-runtime" }
vo-ext = { path = "../../../lang/crates/vo-ext" }
vo-ffi-macro = { path = "../../../lang/crates/vo-ffi-macro" }
vo-common = { path = "../../../lang/crates/vo-common" }
vo-syntax = { path = "../../../lang/crates/vo-syntax" }
linkme = "0.3"
