[package]
name = "vo-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vo AST parsing and printing"

[features]
default = []
ffi = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-common = { path = "../../../../lang/crates/vo-common" }
vo-common-core = { path = "../../../../lang/crates/vo-common-core" }
vo-syntax = { path = "../../../../lang/crates/vo-syntax" }
vo-runtime = { path = "../../../../lang/crates/vo-runtime" }
vo-ext = { path = "../../../../lang/crates/vo-ext" }
vo-ffi-macro = { path = "../../../../lang/crates/vo-ffi-macro" }
linkme = "0.3"
