[package]
name = "vo-bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vo bytecode text format parsing and formatting"

[features]
default = []
ffi = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-common = { path = "../../../../lang/crates/vo-common" }
vo-common-core = { path = "../../../../lang/crates/vo-common-core" }
vo-vm = { path = "../../../../lang/crates/vo-vm" }
vo-runtime = { path = "../../../../lang/crates/vo-runtime" }
vo-ext = { path = "../../../../lang/crates/vo-ext" }
vo-ffi-macro = { path = "../../../../lang/crates/vo-ffi-macro" }
linkme = "0.3"
