[package]
name = "vo-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vo language runner - FFI bindings for Vo programs"

[features]
default = []
ffi = []
gc-debug = ["vo-runtime/gc-debug"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-launcher = { path = "../../../../lang/crates/vo-launcher" }
vo-vm = { path = "../../../../lang/crates/vo-vm" }
vo-runtime = { path = "../../../../lang/crates/vo-runtime" }
vo-ext = { path = "../../../../lang/crates/vo-ext" }
vo-ffi-macro = { path = "../../../../lang/crates/vo-ffi-macro" }
linkme = "0.3"
